sysvipc: Fix 32-bit compat on !i386

The various time fields are time_t's which are only 32-bit on i386.

Fixing the old versions is probably of little use, but it's more correct
and in theory there could be powerpc binaries from 6.x.

PR:		240035
Fixes:		fbb273bc05bef Properly support for FreeBSD 4 32bit System V shared memory.
Reviewed by:	kib
Differential Revision:	https://reviews.freebsd.org/D42870